# QR-ScanGen

./: .gitignore  CHANGELOG.md  ChangeLog.md  Makefile  QR-ScanGen.spec  README.md  ReadMe.md  ScanGen.py  ScanGen.ui  TODO.md  __main__.py  __project__.py  build.py  build_all.sh  build_flatpak.sh  build_pyinstaller.py  flatpak.yaml  generate_metainfo.py  install_dev_requirements.sh  metadata.py  pyproject.toml  requirements-dev  requirements-dev.txt  requirements.txt  tech.emendir.QR-ScanGen.metainfo.xml  tech.emendir.QR-ScanGen.yml
docs/media/: QR-ScanGen-Demo.webm
packaging/flatpak/: .gitignore  build_flatpak.sh  generate_metainfo.py  manual_metainfo.xml  python3-modules.json  requirements-auto.txt  requirements-exclusions.txt  tech.emendir.QR-ScanGen.yml
packaging/flatpak/manifest/: tech.emendir.QR-ScanGen.metainfo.xml  tech.emendir.QR-ScanGen.yml
packaging/pyinstaller/: build_pyinstaller.py  qr-scangen.spec
src/: __main__.py
src/qr_scangen/: QR-ScanGen.spec  main.py  requirements.txt
src/qr_scangen.egg-info/: PKG-INFO  SOURCES.txt
