[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
dynamic = ["dependencies"]
name = "qr-scangen"
authors = [{ name = "emendir" }]
version = "1.3.1"

[tool.setuptools.dynamic]
dependencies = {file = ["src/qr_scangen/requirements.txt"]}

[tool.setuptools.packages.find]
where = ["src"]
include = ["qr_scangen"]
namespaces = false

[project.scripts]
qr-scangen = "qr_scangen:main"
